# nostr-pubsub

./: .gitignore  Cargo.toml  README.md
crates/nostr-pubsub/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/nostr-pubsub-fips/: CHANGELOG.md  Cargo.toml  README.md
crates/nostr-pubsub-fips/examples/: fips-pubsub-wire-stdio.rs  inv-want-stdio.rs
crates/nostr-pubsub-fips/src/: client_inner.rs  client_transport.rs  lib.rs  peerfinding.rs  peerfinding_runtime_tests.rs  pending_wants.rs  provider_behavior.rs  recent_events.rs  reputation.rs  seen_ids.rs  stats.rs  stream.rs  stream_tcp.rs  tests.rs  wire_tcp.rs
crates/nostr-pubsub-fips/src/tests/: reputation.rs
crates/nostr-pubsub-fips/tests/: inv_want_stream.rs  inv_want_tcp_driver.rs
crates/nostr-pubsub-relay/: CHANGELOG.md  Cargo.toml  README.md
crates/nostr-pubsub-relay/src/: lib.rs
crates/nostr-pubsub-sim/: Cargo.toml  README.md
crates/nostr-pubsub-sim/src/: clock.rs  incentive_gates.rs  incentive_output.rs  incentives.rs  lib.rs  machine_wot_output.rs  main.rs  metrics.rs  rediscovery_output.rs  topology.rs  topology_tests.rs  workload.rs
crates/nostr-pubsub-sim/src/incentives/: accepted_batch.rs  exposure.rs  streaming.rs  tests.rs
crates/nostr-pubsub-sim/src/simulation/: admission.rs  control_transport.rs  delivery.rs  engine.rs  error.rs  lifecycle.rs  machine_wot.rs  mod.rs  mode.rs  network.rs  rating_subscriptions.rs  rediscovery.rs  report.rs  report_types.rs  reputation_flow.rs  reputation_probes.rs  resources.rs  setup.rs
crates/nostr-pubsub-sim/src/simulation/reputation_flow/: test_support.rs
crates/nostr-pubsub-sim/src/simulation/setup/: config.rs  network.rs  nodes.rs  subscriptions.rs  tests.rs  workloads.rs
crates/nostr-pubsub-sim/tests/: cashu_integration.rs  incentives.rs  machine_lifecycle.rs  machine_wot.rs  release_gate.rs  source_size.rs
crates/nostr-pubsub-sim/tests/release_gate/: delivery_trails.rs  machine_reputation.rs  service_accounting.rs
crates/nostr-pubsub-social-graph/: Cargo.toml  README.md
crates/nostr-pubsub-social-graph/src/: lib.rs  reputation.rs  reputation_tests.rs
crates/nostr-pubsub-social-graph/tests/: social_graph_policy.rs
crates/nostr-pubsub/src/: inv_want.rs  lib.rs  live_routes.rs  memory.rs  mesh.rs  mesh_resources.rs  mesh_verified.rs  router.rs  routes.rs  subscriptions.rs  wire.rs
crates/nostr-pubsub/tests/: inv_want_mesh.rs  inv_want_resources.rs  live_routes.rs  routed_query.rs  typescript_interop.rs
crates/nostr-pubsub/tests/data/: interop-vectors.json
docs/: inv-want-wire.md
ts/: package.json  pnpm-lock.yaml
ts/scripts/: check-source-size.mjs
