[package]
name = "nostr-pubsub-relay"
version = "0.1.9"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Actual Nostr relay backend for nostr-pubsub"
documentation = "https://docs.rs/nostr-pubsub-relay"
readme = "README.md"
exclude = ["Cargo.lock"]

[dependencies]
async-trait.workspace = true
nostr-pubsub.workspace = true
nostr-sdk.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
