[package]
name = "nostr-pubsub-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic adversarial simulations for the nostr-pubsub production mesh"
publish = false
readme = "README.md"

[dependencies]
nostr.workspace = true
nostr-pubsub.workspace = true
nostr-pubsub-social-graph.workspace = true
nostr-social-graph.workspace = true
nostr-social-memory.workspace = true
thiserror.workspace = true

[lints]
workspace = true
