[package]
name = "nostr-pubsub-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic adversarial simulations for the nostr-pubsub production mesh"
publish = false
readme = "README.md"

[features]
default = []
cashu-integration = [
  "dep:cashu-credit",
  "dep:cashu-service",
  "dep:cdk",
  "dep:tempfile",
  "dep:tokio",
]

[dependencies]
cashu-credit = { version = "0.3.0", optional = true }
cashu-service = { version = "0.3.1", default-features = false, features = ["simulation"], optional = true }
cdk = { version = "=0.16.0-rc.1", default-features = false, features = ["wallet"], optional = true }
nostr.workspace = true
nostr-pubsub.workspace = true
nostr-pubsub-social-graph.workspace = true
nostr-social-graph.workspace = true
nostr-social-memory.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[lints]
workspace = true
