[package]
name = "nostr-pubsub-social-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Social graph policy adapter for nostr-pubsub"
documentation = "https://docs.rs/nostr-pubsub-social-graph"
readme = "README.md"
exclude = ["Cargo.lock"]

[dependencies]
async-trait.workspace = true
nostr.workspace = true
nostr-pubsub.workspace = true
nostr-social-graph.workspace = true
nostr-social-memory.workspace = true
thiserror.workspace = true

[dev-dependencies]
nostr-sdk.workspace = true
tokio.workspace = true

[lints]
workspace = true
