[package]
name = "nostr-pubsub"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neutral Nostr event and source routing primitives"
documentation = "https://docs.rs/nostr-pubsub"
readme = "README.md"
exclude = ["Cargo.lock"]

[dependencies]
async-trait.workspace = true
nostr.workspace = true
thiserror.workspace = true

[lints]
workspace = true
