[package]
name = "nostr-pubsub"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neutral Nostr event and source routing primitives"
documentation = "https://docs.rs/nostr-pubsub"
readme = "README.md"
exclude = ["Cargo.lock"]

[dependencies]
async-trait.workspace = true
nostr.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true

[lints]
workspace = true
